# openenv-sql-analyst

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.sh
data/: mock_data.sql
environment/: __init__.py  db_engine.py  env.py  graders.py  models.py  tasks.py
server/: app.py
